# alphaloom

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  START_ALPHALOOM.cmd  demo.bat  dev.bat
backend/: pyproject.toml
backend/alphaloom/: cli.py  serve.py
backend/alphaloom/api/: app.py  live.py  runs_store.py  schemas.py  serialize.py  service.py
backend/alphaloom/backtest/: runner.py
backend/alphaloom/brokers/: base.py  paper.py
backend/alphaloom/copilot/: blueprint.py  layout.py  prompts.py
backend/alphaloom/data/: source.py  sqlite_source.py
backend/alphaloom/eval/: ablation.py  demo_coords.py  fidelity.py  leaderboard.py  scorecard.py
backend/alphaloom/evolve/: __init__.py  lab.py
backend/alphaloom/graph/: compiler.py  cost.py  (+3 more)
backend/tests/: conftest.py  test_ablation.py  test_api_eval.py  test_api_lifespan.py  test_api_rest.py  test_api_status.py  test_api_ws.py  test_backtest_e2e.py  test_builtin_nodes.py  test_causality.py  test_committee.py  test_compiler_subgraph.py  test_compiler_typecheck.py  test_copilot.py  test_copilot_api.py  test_cost_certificate.py  test_data_source.py  test_engine.py  test_ensure_demo_db.py  test_evolve.py  test_fidelity.py  test_final_seams.py  test_graph_model.py  test_hardening.py  test_leaderboard.py  test_live_session.py  test_llm_nodes.py  test_llm_recording.py  test_node_sandbox.py  test_paper_broker.py  test_rag_pa.py  test_reflection.py  test_registry.py  test_runs_store.py  test_scorecard.py  test_seed_recordings.py  test_serve.py  test_smoke.py  test_startup_port_guard.py  test_ws_lib.py
(+113 files in other folders)
