[project]
name = "alphaloom"
version = "0.1.0"
description = "Agent-native quant trading platform - the graph IS the agent"
license = {text = "MIT"}
authors = [{name = "Zhao Chenghao"}]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphaloom*"]
