[project]
name = "alphaloom"
version = "0.1.0"
description = "Agent-native quant trading platform - the graph IS the agent"
license = {text = "MIT"}
authors = [{name = "Zhao Chenghao"}]
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "openai>=1.40", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphaloom*"]
